<resources>
    <string name="app_name">KRAFT_HOTEL</string>
    <string name="Number">8(800)500-73-76</string>
    <string name="SecondNumber">7(812)310-02-01</string>
    <string name="SPB">САНКТ-ПЕТЕРБУРГ</string>
    <string name="Address">УЛ.САДОВАЯ,Д.25</string>
    <string name="History1">Одним из самых интересных домов Петербурга является дом Николаевых. Он расположен на Садовой улице, занимая целый квартал между Банковским и Мучным переулками. Только приглядевшись к нему, замечаешь, что это единый дом, настолько отличаются по стилю его части (впрочем, дом ещё уникален тем, что имеет четыре адреса: Мучной пер., 4, Садовая ул., 25, Банковский пер., 5 и Москательный пер., 3</string>
    <string name="History2">Изначально здание было построено неизвестным архитектором в конце XVIII века, в господствовавшем тогда стиле классицизм. Об этом говорит треугольный фронтон здания.В 1842 году архитектор А. М. Ливен надстроил аркаду для размещения торговых лавок по Садовой улице.
        Своим названием Садовая улица обязана тому, что в конце 18-го века располагались многочисленные особняки и усадьбы с обширными садами и огородами. И там всегда шла активная торговля.
        Новая, еще более масштабная перестройка, выполненная по проекту архитектора П. Н. Волкова, последовала в 1879-1880 годах. Открытую прежде аркаду застеклили, а фасад по Мучному переулку перестроили в модном в те времена стиле эклектики.
        Однако, эта перестройка в жизни дома также оказалась не последней. В 1903-м году архитектор Г. И. Люцедарский перестраивает угловую часть здания. В стране господствует модерн, и архитектор украшает цоколь здания гранитной щепой, а в простенках между окнами появляются женские головы.</string>
    <string name="History3">Но и это еще не конец! В 1915-м году надстраивается еще один этаж! Теперь догадаться, что это один дом, а не три, стало практически невозможно. Дом Николаевых стал памятником трем стилям, царившим в России с XVIII по начало XX века, а также двум богам, которым верно служат люди всегда - золоту и моде.
В начале XX века на первом этаже размещался книжный магазин И. Д. Сытина, известного российского предпринимателя, книгоиздателя, просветителя.
В начале ХХ века Сытин имел широкую сеть книжных магазинов по всей России, два из них находились в Петрограде. Принося владельцу очень приличный доход.
Однако своих рабочих Сытин не баловал, так как был очень прижимист. Подсчитав, что знаки препинания составляют около 12 % набора, решил платить наборщикам только за набранные буквы. Не удивительно, что в следствии этого возмущенные рабочие выдвинули хозяину требования — сократить рабочий день до 9 часов и увеличить заработную плату. Сытин согласился сократить рабочий день, но свой приказ — не платить за знаки препинания — оставил в силе… И тогда началась стачка, которую подхватили рабочие других заводов и фабрик. После, в петербургских салонах говорили, что Всероссийская стачка 1905 года произошла «из-за сытинской запятой».
В 1917 году все предприятия и магазины И. Д. Сытина были национализированы и у дома Николаевых началась другая история.
В 2001 году дом был включён в список вновь выявленных объектов, представляющих историческую, научную, художественную или иную культурную ценность.
В августе 2015 года у уникального здания, началась новая эпоха - здесь открылся совершенно новый и уютный Kravt Hotel.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>